--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -2,7 +2,7 @@
 mixin allcss() 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap" rel="stylesheet">
 	
 	link(href="libs/swiper/swiper-bundle.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
