--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -121,6 +121,7 @@ $output-bourbon-deprecation-warnings: false;
 
 @import '../pug/blocks/sNews/_sNews';
 @import '../pug/blocks/sEvents/_sEvents';
+@import '../pug/blocks/sEventsList/_sEventsList';
 @import '../pug/blocks/sWays/_sWays';
 @import '../pug/blocks/sTrust/_sTrust';
 @import '../pug/blocks/sJoin/_sJoin'; 
