--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -28,17 +28,12 @@
 	width: math.div(16,16)*1em;
 }
 .icon-chevron-left {
-<<<<<<< HEAD
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
-=======
-	font-size:math.div(16,10)*1rem;
-	width: math.div(16,16)*1em;
->>>>>>> d184866cb43613d1aa45f98949b1618bb717af48
 }
 .icon-chevron-right {
-	font-size:math.div(24,10)*1rem;
-	width: math.div(24,24)*1em;
+	font-size:math.div(32,10)*1rem;
+	width: math.div(32,32)*1em;
 }
 .icon-facebook {
 	font-size:math.div(24,10)*1rem;
@@ -72,7 +67,7 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
-.icon-whatsApp {
+.icon-whatsapp {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
