--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -145,9 +145,9 @@
 
 .toggle-menu-mobile {
 	--h: 1px;
-	--color: currentColor;
+	--color: var(--top-nav-color, #fff);
 	--position: calc(var(--h) * 5);
-	will-change: transform, background;
+	will-change: transform;
 
 
 	&.on span {
