--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -113,6 +113,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/headerBlock/_headerBlock.scss';
 @import '../pug/blocks/sAboutPerson/_sAboutPerson.scss';
 @import '../pug/blocks/sAboutCaption/_sAboutCaption.scss';
+@import '../pug/blocks/sValueProposition/_sValueProposition.scss';
 @import '../pug/blocks/sStatus/_sStatus.scss';
 
 @import '../pug/blocks/header/_header.scss';
