--- a/sourse/pug/blocks/sEvents/_sEvents.pug
+++ b/sourse/pug/blocks/sEvents/_sEvents.pug
@@ -23,5 +23,5 @@ mixin sEvents(data)
 					+itemEvent()
 			+e.footer.text-md-end
 				+b.link-more(href="#") Все мероприятия 
-					+icon("arrrow-right")
+					+icon("arrow-right-link")
 	// end sEvents
