--- a/sourse/pug/blocks/sTrust/_sTrust.pug
+++ b/sourse/pug/blocks/sTrust/_sTrust.pug
@@ -38,7 +38,7 @@ mixin sTrust(data)
 											+e.col.col-6
 												+b.link-more(href="#")
 
-													+icon("arrrow-right")
+													+icon("arrow-right-link")
 													br
 													| Перейти в раздел проекты
 					+tab().active
