--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -11,7 +11,7 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
-.icon-arrrow-right {
+.icon-arrow-right-link {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(40,8)*1em;
 }
@@ -67,7 +67,7 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
-.icon-whatsapp {
+.icon-whatsApp {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
