--- a/sourse/pug/blocks/sNews/_sNews.scss
+++ b/sourse/pug/blocks/sNews/_sNews.scss
@@ -84,6 +84,12 @@
 	flex-direction: column;
 	&:not(:hover) {
 		color: $body-color;
+		img{
+			filter: saturate(0);
+		}
+	}
+	img{
+		@include mt;
 	}
 	&__img-wrap {
 		@extend .ratio;
