--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -29,10 +29,10 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	//- +headerBlock.bg-dark.section--vh
-	//- +sNews.bg-white.section--vh
-	//- +sEvents.bg-dark.section--vh
-	//- +sWays.bg-white.section--vh
+	+headerBlock.bg-dark.section--vh
+	+sNews.bg-white.section--vh
+	+sEvents.bg-dark.section--vh
+	+sWays.bg-white.section--vh
 	+sTrust.bg-dark.section--vh
 	+sJoin.bg-white.section--vh
 	+sForm().bg-dark.section--vh
