--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -28,3 +28,7 @@ mixin addblock()
 		+e.btn--minus(type="button")
 		input(type="text" value="1")
 		+e.btn--plus(type="button")
+		
+mixin blur()
+	.animate-blur&attributes(attributes)
+			img(src="img/@2x/webp/animate-blur.webp", alt="")
