--- a/sourse/pug/blocks/sEvents/_sEvents.scss
+++ b/sourse/pug/blocks/sEvents/_sEvents.scss
@@ -6,7 +6,7 @@
 	// background-color: $body-color;
 	position: relative;
 	z-index: 2;
-	overflow: hidden;
+	// overflow: hidden;
 	&::after,
 	&::before{
 		content: url(../img/@2x/webp/event-before.webp);
