--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -1,5 +1,7 @@
 .menu{
 	left: 0; 
+	
+
 	a{
 		padding: rem(8) rem(24);
 		padding-right: rem(40);
@@ -230,9 +232,12 @@
 
 		
 		.toggle-menu-mobile {  
-			position: absolute; 
-			right: 0;
-			color: #FFF;
+			@include media-breakpoint-down(lg) {
+
+				position: absolute; 
+				right: 0;
+				// color: #FFF;
+			}
 			top: 0;
 			z-index: 9999; 
 			span:after,
@@ -268,20 +273,24 @@
 			padding-top: rem(56);
 			list-style: none;
 			height: calc(var(--vh, 1vh) * 100);
-			
+			margin-bottom: 0;
 			
 			
 
+			overflow-y: auto;
 			&:not(.menu) {
 
 				// position: relative;
-				overflow-y: auto;
 			}
 			// overflow-y: auto;
 			
 			background: #0A0B0F;
-			min-height: 100%; 
+			// height: 100%; 
 			
+		}
+		.top-nav{
+			top: 0;
+			bottom: auto;
 		}
 	}
 // }
