--- a/sourse/pug/pages/05-work.pug
+++ b/sourse/pug/pages/05-work.pug
@@ -16,7 +16,7 @@ include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
 
 block variables
-	- let  mainPage= 'main-page' 
+	- let  mainPage=  null
 	- let  bg= null
 
 block title
