--- a/sourse/pug/pages/03-status.pug
+++ b/sourse/pug/pages/03-status.pug
@@ -14,7 +14,7 @@ include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
 
 block variables
-	- let  mainPage= 'main-page page-fixed-video' 
+	- let  mainPage= '' 
 	- let  bg= null
 
 block title
@@ -27,7 +27,7 @@ block pagecontent
 	//- 		source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerBlockStatus.bg-dark.section--vh
+	+headerBlockBody('Status',`Статусы и награды`,`Входим в&nbsp;TOP-10 крупнейших поставщиков BI-решений в&nbsp;России 2020, в&nbsp;TOP-5 аутсорсеров поддержки решений SAP в&nbsp;России по&nbsp;версии аналитического центра TAdviser`,).bg-dark.section--vh
 	+sStatus2.bg-white.section--vh
 	//- +sNews.bg-white.section--vh
 	//- +sEvents.bg-dark.section--vh
