--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -116,6 +116,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sValueProposition/_sValueProposition.scss';
 @import '../pug/blocks/sNumericalIndicators/_sNumericalIndicators.scss';
 @import '../pug/blocks/sStatus/_sStatus.scss';
+@import '../pug/blocks/sPrinciples/_sPrinciples.scss';
 
 @import '../pug/blocks/header/_header.scss';
 @import '../pug/blocks/footer/_footer.scss';
