--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -89,3 +89,27 @@
 		}
 	}
 }
+
+.sAboutCaptionItem{
+	&__pic {
+		width: rem(56);
+		height: rem(56);
+		margin-bottom: rem(16);
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	&__title {
+		font-weight: 600;
+		font-size: rem(16);
+		line-height: calc(24 / 18);
+		margin-bottom: rem(8);
+	}
+	&__text {
+		font-weight: 300;
+		font-size: rem(12);
+		line-height: calc(16 / 13);
+		color: #7e7d85;
+	}
+}
