--- a/sourse/pug/blocks/sAboutCaption/_sAboutCaption.pug
+++ b/sourse/pug/blocks/sAboutCaption/_sAboutCaption.pug
@@ -5,19 +5,13 @@ mixin sAboutCaption(data)
 			.section-title
 				h2 Стабильность требует изменений
 				+e.sub-title Помогаем компаниям в проектах цифровой трансформации
-			mixin item(pic,title,text)
-				+e.item
-					+e.item-pic
-						img(src=`img/svg/sAboutCaption-${pic}.svg`, alt="")
-					+e.item-title!=title
-					+e.item-text!=text
 			.row
 				.col-lg-6
-					+item(`1`,`Профессионализм`,`Профессионализм лежит в&nbsp;основе нашей стабильности&nbsp;&mdash; мы&nbsp;знаем, как подойти к&nbsp;решению нестандартных задач и&nbsp;обеспечить неизменно высокий результат в&nbsp;меняющихся условиях. Все наши достижения&nbsp;&mdash; результат многолетней работы и&nbsp;мы&nbsp;гордимся&nbsp;ею.`)
+					+sAboutCaptionItem(`sAboutCaption-1`,`Профессионализм`,`Профессионализм лежит в&nbsp;основе нашей стабильности&nbsp;&mdash; мы&nbsp;знаем, как подойти к&nbsp;решению нестандартных задач и&nbsp;обеспечить неизменно высокий результат в&nbsp;меняющихся условиях. Все наши достижения&nbsp;&mdash; результат многолетней работы и&nbsp;мы&nbsp;гордимся&nbsp;ею.`)
 				.col-lg-6
-					+item(`2`,`Командность`,`Командность вдохновляет нас на&nbsp;результаты выше ожиданий&nbsp;&mdash; умеем работать в&nbsp;команде, соблюдать баланс командных и&nbsp;личных интересов, поддерживать и&nbsp;ценить друг друга, выбирать лучшее решение вне зависимости от&nbsp;того,кому оно принадлежит. Мы&nbsp;стремимся создать атмосферу комфорта и&nbsp;доверия&nbsp;&mdash; в&nbsp;компании, в&nbsp;проектах, в&nbsp;партнерстве с&nbsp;клиентами.`)
+					+sAboutCaptionItem(`sAboutCaption-2`,`Командность`,`Командность вдохновляет нас на&nbsp;результаты выше ожиданий&nbsp;&mdash; умеем работать в&nbsp;команде, соблюдать баланс командных и&nbsp;личных интересов, поддерживать и&nbsp;ценить друг друга, выбирать лучшее решение вне зависимости от&nbsp;того,кому оно принадлежит. Мы&nbsp;стремимся создать атмосферу комфорта и&nbsp;доверия&nbsp;&mdash; в&nbsp;компании, в&nbsp;проектах, в&nbsp;партнерстве с&nbsp;клиентами.`)
 				.col-lg-6
-					+item(`3`,`Открытость`,`Открытость дает нам возможность мыслить масштабно, без границ&nbsp;&mdash; быть открытыми новым технологиям и&nbsp;мнениям,находить незаурядные решения, открыто делиться знаниями с&nbsp;коллегами, клиентами, партнерами. Мы&nbsp;любим инновации и&nbsp;следуем&nbsp;им.`)
+					+sAboutCaptionItem(`sAboutCaption-3`,`Открытость`,`Открытость дает нам возможность мыслить масштабно, без границ&nbsp;&mdash; быть открытыми новым технологиям и&nbsp;мнениям,находить незаурядные решения, открыто делиться знаниями с&nbsp;коллегами, клиентами, партнерами. Мы&nbsp;любим инновации и&nbsp;следуем&nbsp;им.`)
 				.col-lg-6
-					+item(`4`,`Ответственность`,`Ответственность определяет наш образ мыслей и&nbsp;поступки&nbsp;&mdash; мы&nbsp;умеем брать ответственность за&nbsp;собственные действия и&nbsp;общий результат, ответственно подходим к&nbsp;исполнению обязательств и&nbsp;договоренностей, дорожим репутацией и&nbsp;ценим долголетнее партнерство. Исходим из&nbsp;принципа &laquo;успех наших клиентов&nbsp;&mdash; наш успех&raquo;.`)
+					+sAboutCaptionItem(`sAboutCaption-4`,`Ответственность`,`Ответственность определяет наш образ мыслей и&nbsp;поступки&nbsp;&mdash; мы&nbsp;умеем брать ответственность за&nbsp;собственные действия и&nbsp;общий результат, ответственно подходим к&nbsp;исполнению обязательств и&nbsp;договоренностей, дорожим репутацией и&nbsp;ценим долголетнее партнерство. Исходим из&nbsp;принципа &laquo;успех наших клиентов&nbsp;&mdash; наш успех&raquo;.`)
 	// end sAboutCaption
