--- a/sourse/pug/blocks/sPrinciples/_sPrinciples.scss
+++ b/sourse/pug/blocks/sPrinciples/_sPrinciples.scss
@@ -2,27 +2,63 @@
 .sPrinciples {
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
-	// --sTPB: #{rem()};
-	&__row{
+	@include media-breakpoint-up(lg) {
+		--sTPB: #{rem(52)};
+	}
+	--sTPB: #{rem(24)};
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
-
 	}
-	.section-title{
-		
+	.section-title {
 	}
-	&__col{
-
+	&__col {
 	}
-	&__item{
-
+	&__item {
+	}
+	h2 {
+		text-transform: uppercase;
+		margin-bottom: 0;
+	}
+	&__slide {
+		@include media-breakpoint-up(xxl) {
+			width: calc(33.333% - 70px);
+			max-width: calc(33.333% - 70px);
+		}
+		@include media-breakpoint-up(lg) {
+			width: calc(33.333% - 40px);
+			max-width: calc(33.333% - 40px);
+		}
+		width: 100%;
+	}
+	.sAboutCaptionItem {
+		&:first-child {
+			@include media-breakpoint-up(lg) {
+				margin-bottom: rem(64);
+			}
+			margin-bottom: rem(24);
+		}
 	}
 
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	.swiper-scrollbar {
+		position: relative;
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+		margin-top: rem(32);
+	}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sPrinciples
