sWorkConditions and some fix

--- a/sourse/pug/blocks/sNumericalIndicators/_sNumericalIndicators.pug
+++ b/sourse/pug/blocks/sNumericalIndicators/_sNumericalIndicators.pug
@@ -8,7 +8,7 @@ mixin sNumericalIndicators(data)
 					+e.caption Более 13&nbsp;лет работаем над тем, чтобы быть лучшей консалтинговой компанией в&nbsp;сфере внедрения ИТ-решений для бизнеса
 					+e.link(href="#")
 						span Открытые вакансии (hh)
-						+icon('arrrow-right')
+						+icon('arrow-right-link')
 				+e.info-block
 					.row
 						.col-lg-6
