--- a/sourse/pug/blocks/sEventsList/_sEventsList.scss
+++ b/sourse/pug/blocks/sEventsList/_sEventsList.scss
@@ -3,7 +3,7 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
-	background-color: #000000;
+	// background-color: #000000;
 	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
