--- a/sourse/pug/pages/02-about.pug
+++ b/sourse/pug/pages/02-about.pug
@@ -24,9 +24,9 @@ block title
 	title= title
 block pagecontent
 	+mob-mnu()
-	//- video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
-	//- 		source(src='video/video.webm' type='video/webm')
-	//- 		source(src='video/video.mp4' type='video/mp4')
+	video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
+			source(src='video/video.webm' type='video/webm')
+			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
 	+headerBlockBody('About',`О нас`,`Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP`,'right').bg-dark.section--vh
