--- a/sourse/pug/pages/03-status.pug
+++ b/sourse/pug/pages/03-status.pug
@@ -22,9 +22,9 @@ block title
 	title= title
 block pagecontent
 	+mob-mnu()
-	//- video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
-	//- 		source(src='video/video.webm' type='video/webm')
-	//- 		source(src='video/video.mp4' type='video/mp4')
+	video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
+			source(src='video/video.webm' type='video/webm')
+			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
 	+headerBlockBody('Status',`Статусы и награды`,`Входим в&nbsp;TOP-10 крупнейших поставщиков BI-решений в&nbsp;России 2020, в&nbsp;TOP-5 аутсорсеров поддержки решений SAP в&nbsp;России по&nbsp;версии аналитического центра TAdviser`,).bg-dark.section--vh
