--- a/sourse/pug/pages/04-press-center.pug
+++ b/sourse/pug/pages/04-press-center.pug
@@ -25,9 +25,9 @@ block title
 	title= title
 block pagecontent
 	+mob-mnu()
-	//- video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
-	//- 		source(src='video/video.webm' type='video/webm')
-	//- 		source(src='video/video.mp4' type='video/mp4')
+	video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
+			source(src='video/video.webm' type='video/webm')
+			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
 	+headerBlockBody('PressCenter',`Пресс-центр`,`В&nbsp;этом разделе вы&nbsp;можете ознакомиться с&nbsp;новостями САПРАН, прочитать статьи и&nbsp;интервью, подготовленные нашими специалистами.`,'right').bg-dark.section--vh
