--- a/sourse/pug/pages/05-work.pug
+++ b/sourse/pug/pages/05-work.pug
@@ -11,6 +11,7 @@ include ../blocks/sValueProposition/_sValueProposition.pug
 include ../blocks/sNumericalIndicators/_sNumericalIndicators.pug
 include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sPrinciples/_sPrinciples.pug
+include ../blocks/sWorkConditions/_sWorkConditions.pug
 include ../blocks/sJoin/_sJoin.pug 
 include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
@@ -24,15 +25,16 @@ block title
 	title= title
 block pagecontent
 	+mob-mnu()
-	//- video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
-	//- 		source(src='video/video.webm' type='video/webm')
-	//- 		source(src='video/video.mp4' type='video/mp4')
+	video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
+			source(src='video/video.webm' type='video/webm')
+			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
 	+headerBlockBody('Work',`Работа в SAPRUN`,`В&nbsp;SAPRUN мы&nbsp;создаем успешный бизнес, в&nbsp;котором всем нам комфортно и&nbsp;интересно работать. Бизнес, в&nbsp;котором отношения строятся на&nbsp;доверии, взаимовыгодном, доброжелательном и&nbsp;долгосрочном сотрудничестве.<br>Наша цель&nbsp;&mdash; максимально реализовать потенциал клиентов и&nbsp;сотрудников.`,'right').bg-dark.section--vh
 	+sValueProposition.bg-white.section--vh
 	+sNumericalIndicators.bg-dark.section--vh
 	+sPrinciples.bg-white.section--vh
+	+sWorkConditions.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
 
 	+footer().bg-dark
