--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -16,7 +16,7 @@ mixin sForm()
 					.col-md-6
 						+input("E-mail",'email')
 					.col-12
-						+input("Что вы хотите обсудить?",'textarea')
+						+input("Что вы хотите обсудить?",'textarea')(rows='5')
 				+policy
 				+e.btn.btn.btn-primary(type="submit")  Отправить
 	// end sForm
