--- a/sourse/pug/blocks/sTrust/_sTrust.pug
+++ b/sourse/pug/blocks/sTrust/_sTrust.pug
@@ -2,7 +2,7 @@ mixin sTrust(data)
 	// start sTrust
 	+b.SECTION.sTrust.section#sTrust&attributes(attributes)
 		.container
-			+b.section-title.text-center
+			+b.section-title.text-md-center
 				h2 Нам доверяют
 			.tabs
 				.tabs-slider--js.swiper
