--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -1,4 +1,7 @@
 .form-wrap{
+	textarea{
+		min-height: calc(7.6em + #{$input-padding-y}* 2);
+	}
 	&__input-wrap{
 		 // @extend .form-group;
 		 position: relative;
@@ -57,7 +60,7 @@
 	 &.form-select  {
 		 & ~ .form-wrap__input-title{
 			//  color: #846951;
-			 transform: scale(.8) translateY(-90%) ; 
+			 transform: scale(.8) translateY(-120%) ; 
 		 }
 	 }
  }
