--- a/sourse/pug/blocks/sEvents/_sEvents.pug
+++ b/sourse/pug/blocks/sEvents/_sEvents.pug
@@ -13,7 +13,7 @@ mixin sEvents(data)
 	// start sEvents
 	+b.SECTION.sEvents.section#sEvents&attributes(attributes) 
 		.container
-			+b.section-title.text-center
+			+b.section-title.text-md-center
 				h2 Ближайшие мероприятия
 				
 			+e.row.row
