--- a/sourse/pug/blocks/sEvents/_sEvents.scss
+++ b/sourse/pug/blocks/sEvents/_sEvents.scss
@@ -14,6 +14,7 @@
 		z-index: -1; 
 		top: -15%;
 		left: -15%;
+		pointer-events: none;
 	}
 	&::before{
 		left: 40%;
@@ -58,7 +59,8 @@
 
 
 .item-event{
-	background-color: $body-color;
+	// background-color: $body-color;
+	background: #191A1E;
 	box-shadow: 0px 8px 42px rgba(99, 111, 128, 0.18);
 	@include media-breakpoint-up(sm) {
 
