--- a/sourse/pug/blocks/sWays/_sWays.scss
+++ b/sourse/pug/blocks/sWays/_sWays.scss
@@ -4,7 +4,7 @@
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
 	&__row{
-		--bs-gutter-x: #{rem(120)};
+		--bs-gutter-x: #{rem(100)};
 		// --bs-gutter-y: #{rem()};
 
 	}
@@ -18,10 +18,10 @@
 
 	}
 	.tabs__btn{
-		padding-top: rem(20);
-		padding-bottom: rem(20);
-		
-		max-width: rem(387);
+		padding-top: rem(16);
+		padding-bottom: rem(16);
+		@include rfs(30px);
+		max-width: rem(400);
 		@include mt;
 		cursor: pointer;
 		&:hover,
@@ -105,6 +105,9 @@
 	@include media-breakpoint-down(md) {
 		.tabs__content{
 			display: block !important;
+			&:not(:last-child){
+				border-bottom: 1px solid var(--border, #E3E7EC);
+			}
 		}
 		li{
 			padding: 0;
@@ -112,7 +115,7 @@
 
 				padding-top: 14px;
 				padding-bottom: 14px;
-				border-bottom: 1px solid #E3E7EC;
+				border-top: 1px solid #E3E7EC;
 			}
 			&:not(:last-child){
 			}
@@ -153,7 +156,7 @@
 	cursor: pointer;
 	position: relative;
 	color: var(--color, #{$body-color});
-	border-bottom: 1px solid var(--border, #E3E7EC);
+	
 	.icon{
 		font-size: 16px; 
 		right: 0;
