--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -625,3 +625,31 @@ iframe {
 		background:var(--color, #fff)
 	}
 }
+
+.container--small {
+	padding: 0 16px;
+	@include media-breakpoint-up(lg) {
+		padding: 0 200px;
+	}
+}
+
+.container--large {
+	padding: 0 16px;
+	@include media-breakpoint-up(lg) {
+		padding: 0 131px;
+	}
+}
+
+.mb-32 {
+	margin-bottom: 24px;
+	@include media-breakpoint-up(lg) {
+		margin-bottom: 32px;
+	}
+}
+
+.mb-56 {
+	margin-bottom: rem(48);
+	@include media-breakpoint-up(lg) {
+		margin-bottom: rem(56);
+	}
+}
