--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -115,6 +115,8 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sAboutCaption/_sAboutCaption.scss';
 @import '../pug/blocks/sValueProposition/_sValueProposition.scss';
 @import '../pug/blocks/sNumericalIndicators/_sNumericalIndicators.scss';
+@import '../pug/blocks/sServiceSupport/_sServiceSupport.scss';
+@import '../pug/blocks/sOpportunities/_sOpportunities.scss';
 @import '../pug/blocks/sStatus/_sStatus.scss';
 @import '../pug/blocks/sPrinciples/_sPrinciples.scss';
 @import '../pug/blocks/sWorkConditions/_sWorkConditions.scss';
